// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixed blocks 1`] = `
Object {
  ".": Array [
    Object {
      "label": "",
      "lineno": 15,
      "lines": Array [
        "Unlabeled wildcard code",
      ],
      "type": "",
    },
  ],
  ".ts": Array [
    Object {
      "label": "",
      "lineno": 7,
      "lines": Array [
        "Unlabeled ts code",
      ],
      "type": "ts",
    },
  ],
  "one.": Array [
    Object {
      "label": "one",
      "lineno": 11,
      "lines": Array [
        "Labeled wildcard code",
      ],
      "type": "",
    },
  ],
  "one.ts": Array [
    Object {
      "label": "one",
      "lineno": 3,
      "lines": Array [
        "Labeled ts code",
      ],
      "type": "ts",
    },
  ],
}
`;

exports[`typed and labeled blocks 1`] = `
Object {
  "one.ts": Array [
    Object {
      "label": "one",
      "lineno": 3,
      "lines": Array [
        "CODE",
      ],
      "type": "ts",
    },
    Object {
      "label": "one",
      "lineno": 7,
      "lines": Array [
        "CODE 2",
      ],
      "type": "ts",
    },
  ],
}
`;

exports[`typed and unlabeled blocks 1`] = `
Object {
  ".ts": Array [
    Object {
      "label": "",
      "lineno": 3,
      "lines": Array [
        "CODE",
      ],
      "type": "ts",
    },
    Object {
      "label": "",
      "lineno": 7,
      "lines": Array [
        "CODE 2",
      ],
      "type": "ts",
    },
  ],
}
`;

exports[`untyped and labeled blocks 1`] = `
Object {
  "one.": Array [
    Object {
      "label": "one",
      "lineno": 3,
      "lines": Array [
        "CODE",
      ],
      "type": "",
    },
    Object {
      "label": "one",
      "lineno": 7,
      "lines": Array [
        "CODE 2",
      ],
      "type": "",
    },
  ],
}
`;

exports[`untyped and unlabeled blocks 1`] = `
Object {
  ".": Array [
    Object {
      "label": "",
      "lineno": 3,
      "lines": Array [
        "CODE",
      ],
      "type": "",
    },
    Object {
      "label": "",
      "lineno": 7,
      "lines": Array [
        "CODE 2",
      ],
      "type": "",
    },
  ],
}
`;
